Changed new Long to Long.valueOf; Implemented markup pricing + postcode calculation; added demo in server/